# shurlx

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  vcpkg.json
backend/: .dockerignore  CMakeLists.txt  Dockerfile
backend/src/: CMakeLists.txt  main.cpp
backend/src/api/: Api.hpp  CreateHandler.cpp  RedirectHandler.cpp
backend/src/db/: Database.cpp  Database.hpp  Models.hpp
backend/src/utils/: Utils.cpp  Utils.hpp
frontend/: index.html
frontend/css/: style.css
frontend/js/: shorten.js
src/: CMakeLists.txt  Config.hpp  main.cpp
src/api/: API.hpp  RedirectToOriginalURL.cpp  RegisterURL.cpp
src/db/: Database.cpp  Database.hpp
src/middleware/: RateLimiter.cpp  RateLimiter.hpp
src/utils/: Utils.cpp  Utils.hpp
static/css/: global.css
views/: index.html  invalid.html  result.html
